// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders correctly 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <Shipping Radios Component
    isLoading={false}
    selectedShippingMethod="flatrate|flatrate"
    shippingMethods={
      Array [
        Object {
          "amount": Object {
            "currency": "USD",
            "value": 99,
          },
          "available": true,
          "carrier_code": "flatrate",
          "carrier_title": "Flat Rate",
          "method_code": "flatrate",
          "method_title": "Flat Rate",
          "serializedValue": "flatrate|flatrate",
        },
      ]
    }
  />
  <div
    className="initialButtonContainer"
  >
    <button
      className="root_normalPriority"
      disabled={false}
      type="submit"
    >
      <span
        className="content"
      >
        Continue to Payment Information
      </span>
    </button>
  </div>
</form>
`;

exports[`it renders correctly in update mode 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <Shipping Radios Component
    isLoading={false}
    selectedShippingMethod="flatrate|flatrate"
    shippingMethods={
      Array [
        Object {
          "amount": Object {
            "currency": "USD",
            "value": 99,
          },
          "available": true,
          "carrier_code": "flatrate",
          "carrier_title": "Flat Rate",
          "method_code": "flatrate",
          "method_title": "Flat Rate",
          "serializedValue": "flatrate|flatrate",
        },
      ]
    }
  />
  <div
    className="updateButtonContainer"
  >
    <button
      className="root_normalPriority"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Cancel
      </span>
    </button>
    <button
      className="root_highPriority"
      disabled={false}
      type="submit"
    >
      <span
        className="content"
      >
        Update
      </span>
    </button>
  </div>
</form>
`;
